--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-size: 1rem;
 }
@@ -26,8 +31,8 @@ body {
   width: 100%;
 }
 
-.keyvisual {
-  height: 110vh;
+#keyvisual {
+  height: 150vh;
   background-color: #a3a3a3;
 }
 
@@ -109,12 +114,14 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 999;
   width: 100%;
   background-color: #f0e68c;
+  box-sizing: border-box;
+  transition: all .5s ease 0s;
 }
 
 main {
-  height: 110vh;
-  background-color: #a3a3a3;
+  height: 150vh;
+  background-color: #ffe4c4;
 }
